objects/CMPL123QMS__Phase_2_Lab_Investigation__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Assigned_To_Me__c</fullName>
        <formula>CMPL123QMS__Assigned_To__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Phase_2_Lab_Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Department__c</fullName>
        <label>Department</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CMPL123QMS__Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Hypothesis__c</fullName>
        <label>Hypothesis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Investigation_Outcome__c</fullName>
        <label>Investigation Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__OOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OOS</label>
        <referenceTo>CMPL123QMS__OOS__c</referenceTo>
        <relationshipLabel>Phase 2 Lab Investigations</relationshipLabel>
        <relationshipName>Phase_2_Lab_Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Other_Cause__c</fullName>
        <label>Other Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_2_Cause__c</fullName>
        <label>Phase 2 Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_2_Details__c</fullName>
        <label>Phase 2 Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Root_Cause_Determined__c</fullName>
        <label>Root Cause Determined?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Test_Plan__c</fullName>
        <label>Test Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Phase 2 Lab Investigation</label>
    <nameField>
        <displayFormat>PH2L-{00000}</displayFormat>
        <label>Phase 2 Lab Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phase 2 Lab Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Due_Date_Cannot_Be_Set_In_Past</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CMPL123QMS__Due_Date__c &lt; TODAY(), OR( ISNEW(), ISCHANGED(CMPL123QMS__Due_Date__c)))</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Due_Date__c</errorDisplayField>
        <errorMessage>Due Date cannot be set in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Other_Cause_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(CMPL123QMS__Phase_2_Cause__c, "Other") , ISBLANK(CMPL123QMS__Other_Cause__c))</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Other_Cause__c</errorDisplayField>
        <errorMessage>Other Cause is required when Phase 2 Cause is populated with a value of Other.</errorMessage>
    </validationRules>
</CustomObject>